istio/service-a.yml
apiVersion: v1
kind: Service
metadata:
  name: service-a
  namespace: test-istio
  labels:
    app: service-a
    service: service-a
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: service-a

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a-v1
  namespace: test-istio
  labels:
    app: service-a
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-a
      version: v1
  template:
    metadata:
      labels:
        app: service-a
        version: v1
    spec:
      serviceAccountName: config-reader
      containers:
      - name: service-a
        image: docker.io/tracey1123/service-a:20210126
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        volumeMounts:
        - name: tmp
          mountPath: /tmp
      volumes:
      - name: tmp
        emptyDir: {}
---
