istio/service-c.yml
apiVersion: v1
kind: Service
metadata:
  name: service-c
  namespace: istio-test
  labels:
    app: service-c
    service: service-c
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: service-c

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-c-v1
  namespace: istio-test
  labels:
    app: service-c
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-c
      version: v1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: service-c
        version: v1
    spec:
      serviceAccountName: config-reader
      containers:
      - name: service-c
        image: docker.io/tracey1123/service-c:2.2.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "4"
            memory: "16Gi"
          requests:
            cpu: "2"
            memory: "8Gi"
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 90
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 3
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 3
        volumeMounts:
        - name: tmp
          mountPath: /tmp
      volumes:
      - name: tmp
        emptyDir: {}
---
