istio/service-nacos-b.yml
apiVersion: v1
kind: Service
metadata:
  name: service-nacos-b
  namespace: test-istio
  labels:
    app: service-nacos-b
    service: service-nacos-b
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: service-nacos-b

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-nacos-b-v1
  namespace: test-istio
  labels:
    app: service-nacos-b
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-nacos-b
      version: v1
  template:
    metadata:
      labels:
        app: service-nacos-b
        version: v1
    spec:
      containers:
      - name: service-nacos-b
        image: docker.io/tracey1123/service-nacos-b:2.9.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "4"
            memory: "16Gi"
          requests:
            cpu: "2"
            memory: "8Gi"
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 90
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 3
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 3
        volumeMounts:
        - name: tmp
          mountPath: /tmp
      volumes:
      - name: tmp
        emptyDir: {}
---
