istio/service-c-vs-dr.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: service-c
spec:
  hosts:
    - service-c
  http:
    - route:
        - destination:
            host: service-c
            subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service-c
spec:
  host: service-c
  subsets:
  - name: v1
    labels:
      version: v1
