istio/virtualService-all.yml
apiVersion: networking.istio.io/v1beta1
 kind: VirtualService
 metadata:
   name: details
 spec:
   hosts:
     - details
   http:
     - route:
         - destination:
             host: details
             subset: v1
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: productpage
spec:
  hosts:
    - productpage
  http:
    - route:
        - destination:
            host: productpage
            subset: v1
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ratings
spec:
  hosts:
    - ratings
  http:
    - route:
        - destination:
            host: ratings
            subset: v1
