istio/service-a-policy.yml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: istio-demo-auth-policy
  namespace: test-istio
spec:
  selector:
    matchLabels:
      app: service-a
     rules:
     - when:
       - key: request.auth.claims[iss]
         values: ["istio-demo-auth"]
